# zcb3

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  dist-workspace.toml  index.html  manifest.json  prebuild.sh  zcb3-166caa14d09a4be3.js  zcb3-1d62a0391a6d131b.js  zcb3-1f953df94b7ff87.js  zcb3-2692c190dbbce417.js  zcb3-3045c4e01841f3fb.js  zcb3-3fa6be3c3a6b3417.js  zcb3-4a21f5e073ef54b.js  zcb3-7d356019f061ed15.js  zcb3-87eda068dc6638a3.js  zcb3-9bdb396220ceb231.js  zcb3-abb3bc7b5a3c699a.js  zcb3-c2116544316ab92.js  zcb3-dde26e8a49741d03.js
.github/workflows/: build.yml  deploy.yml  main.yml  prebuild.sh
assets/: manifest.json  sw.js
bot/: Cargo.toml
bot/benches/: render.rs
bot/gdr/: Cargo.toml
bot/gdr/src/: lib.rs
bot/gdr2/: Cargo.toml
bot/gdr2/data/: Aeternus.gdr2
bot/gdr2/src/: binary.rs  error.rs  lib.rs  physics.rs  tests.rs
bot/src/: audio.rs  bot.rs  lib.rs  parser.rs  writer.rs
bot/ybot_fmt/: Cargo.toml  README.md
bot/ybot_fmt/src/: action.rs  lib.rs
egui_clickpack_db/: Cargo.toml  README.md
egui_clickpack_db/examples/: demo.rs
egui_clickpack_db/src/: lib.rs
live/: Cargo.toml
locales/: app.yml
media/: site.webmanifest
snippets/zcb3-9175a2cf0a28001c/: inline0.js
src/: bundler.rs  cli.rs  gui.rs  main.rs  utils.rs  video.rs
src/bot/: audio.rs  bot.rs  mod.rs  parser.rs
wix/: main.wxs
