[package]
name = "zcb3"
version = "3.5.10"
edition = "2021"
authors = ["zeozeozeo"]
build = "build.rs"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[profile.release-no-lto]
inherits = "release"
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "bot", "bot/ybot_fmt", "bot/gdr", "bot/gdr2"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
eframe = "0.29.1"
egui-modal = "0.5.0"
env_logger = "0.11.5"
image = { version = "0.25.5", default-features = false, features = ["ico", "png"] }
rfd = "0.15.0"
bot = { path = "bot" }
serde_json = "1"
log = "0.4.21"
anyhow = "1.0.93"
rayon = "1.10.0"
egui_extras = { version = "0.29.1", features = ["image"] }
rustmatica = "0.2.0"
egui_plot = "0.32.1"
serde = "1"
self-replace = "1.5.0"
ureq = "2.10.1"
fastrand = "2.3.0"
egui_clickpack_db = "0.4.0"
chrono = "0.4.39"
timeago = "0.4.2"
tempfile = "3.14.0"

# needed to hide console window on windows
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[build-dependencies]
winres = "0.1.12"
built = "0.7.5"
