[package]
name = "zcb3"
version = "3.6.2"
edition = "2021"
authors = ["zeozeozeo"]
build = "build.rs"
repository = "https://github.com/zeozeozeo/zcb3"
description = " The most feature-complete Geometry Dash clickbot."
license = "Unlicense"

[package.metadata.wix]
upgrade-guid = "A776E6E4-67D5-49CD-9134-D9BBB7DA6CC1"
path-guid = "2659187C-A1B2-4807-95B1-4E67C0813540"
license = false
eula = false

[workspace]
members = [".", "bot", "bot/ybot_fmt", "bot/gdr", "bot/gdr2"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = "0.31"
egui-modal = { git = "https://github.com/zeozeozeo/egui-modal.git", branch = "egui-0.31" }
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = [
    "ico",
    "png",
] }
rfd = "0.15.3"
bot = { path = "bot" }
serde_json = "1"
log = "0.4"
anyhow = "1"
rayon = "1.10.0"
egui_extras = { version = "0.31", features = ["image"] }
rustmatica = "0.2.0"
egui_plot = "0.32.1"
serde = "1"
ureq = "3.0.10"
fastrand = "2.3.0"
egui_clickpack_db = "0.7.2"
chrono = "0.4"
timeago = "0.4.2"
tempfile = "3.20.0"
malloc-best-effort = "0.1.3"

# needed to hide console window on windows
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[build-dependencies]
built = "0.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
