[package]
name = "zcb3"
version = "3.6.5"
edition = "2021"
authors = ["zeozeozeo"]
build = "build.rs"
repository = "https://github.com/zeozeozeo/zcb3"
description = " The most feature-complete Geometry Dash clickbot."
license = "Unlicense"

[package.metadata.wix]
upgrade-guid = "A776E6E4-67D5-49CD-9134-D9BBB7DA6CC1"
path-guid = "2659187C-A1B2-4807-95B1-4E67C0813540"
license = false
eula = false

[workspace]
members = [".", "bot", "bot/ybot_fmt", "bot/gdr", "bot/gdr2"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui-modal = { git = "https://github.com/zeozeozeo/egui-modal.git", branch = "egui-0.33" }
env_logger = "0.11.8"
image = { version = "0.25.6", default-features = false, features = [
    "ico",
    "png",
] }
rfd = "0.17.1"
bot = { path = "bot" }
serde_json = "1"
log = "0.4"
anyhow = "1"
rayon = "1.11.0"
egui_extras = { version = "0.33", features = ["image"] }
rustmatica = "0.2.0"
egui_plot = "0.34"
serde = "1"
fastrand = "2.3.0"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
egui_clickpack_db = { path = "egui_clickpack_db" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.1.4"
chrono = "0.4"
timeago = "0.5.0"
tempfile = "3.24.0"
poll-promise = { version = "0.3", features = ["tokio"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { version = "0.3", features = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Document",
    "Element",
    "console",
] }
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.2", features = ["js"] }

# getting annoying musl-g++ errors in CI, so fuck custom allocators on musl altogether
# also disable for WASM since it requires pthread
[target.'cfg(all(not(target_env = "musl"), not(target_arch = "wasm32")))'.dependencies]
malloc-best-effort = "0.1.4"

# needed to hide console window on windows
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[build-dependencies]
built = "0.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
