[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
byteorder = "1.5.0"
chrono = "0.4.39"
dlhn = "0.1.7"
fasteval2 = { git = "https://github.com/zeozeozeo/fasteval2.git", branch = "sqrt-builtin", default-features = false, features = [
    "alpha-keywords",
] }
hound = "3.5.1"
ijson = "0.1.3"
leb128 = "0.2.5"
log = "0.4.21"
lzma-rs = "0.3.0"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.142"
symphonia = { version = "0.5.4", features = ["all"] }
ybot_fmt = { path = "ybot_fmt" }
gdr = { path = "gdr" }
gdr2 = { path = "gdr2" }
fastrand = "2.3.0"
flate2 = "1.1.2"
slc_oxide = "0.1.0"
rubato = { git = "https://github.com/HEnquist/rubato", branch = "adapter_v2" }
audioadapter = "0.4.0"
indexmap = "2.10.0"
