[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
byteorder = "1.5.0"
chrono = "0.4.42"
dlhn = "0.1.7"
fasteval2 = { git = "https://github.com/zeozeozeo/fasteval2.git", branch = "sqrt-builtin", default-features = false, features = [
    "alpha-keywords",
] }
hound = "3.5.1"
ijson = "0.1.3"
leb128 = "0.2.5"
log = "0.4.21"
lzma-rs = "0.3.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.4", features = ["all"] }
ybot_fmt = { path = "ybot_fmt" }
gdr = { path = "gdr" }
gdr2 = { path = "gdr2" }
fastrand = "2.3.0"
flate2 = "1.1.2"
slc_oxide = "0.2.0"
rubato = "1.0.0"
audioadapter = "2.0.0"
indexmap = "2.10.0"
tcm = "0.1.0"
audioadapter-buffers = "2.0.0"
