[package]
name = "egui_clickpack_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_extras = "0.26.2"
fuzzy-matcher = "0.3.7"
humansize = "2.1.3"
indexmap = { version = "2.2.5", features = ["serde"] }
log = "0.4.21"
open = "5.1.2"
serde = "1.0.197"
serde_json = "1.0.114"
zip-extract = { version = "0.1.3", default-features = false, features = ["deflate"] }
