[package]
name = "egui_clickpack_db"
description = "ClickpackDB integration for egui (public Geometry Dash clickpack archive)"
version = "0.9.0"
edition = "2021"
license = "GLWTPL OR Unlicense OR Apache-2.0 OR MIT"
documentation = "https://docs.rs/egui_clickpack_db"
homepage = "https://github.com/zeozeozeo/egui_clickpack_db"
repository = "https://github.com/zeozeozeo/egui_clickpack_db"
categories = ["gui"]
keywords = ["egui", "clickpackdb", "geometrydash", "archive", "ui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.33"
egui_extras = "0.33"
fuzzy-matcher = "0.3.7"
humansize = "2.1.3"
indexmap = { version = "2.11.0", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
zip = { version = "7.0.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen-futures = "0.4"

[features]
default = []
live = []

[dev-dependencies]
eframe = "0.33"
